dynamically_typed_tests/invalid/variables/became_valid/basicTypeErr11.wacc
# type mismatch: string <- bool

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  s = true
end
